; ModuleID = '/home/carl/AnghaBench/freebsd/cddl/contrib/opensolaris/cmd/zdb/extr_zdb.c_print_idstr.c'
source_filename = "/home/carl/AnghaBench/freebsd/cddl/contrib/opensolaris/cmd/zdb/extr_zdb.c_print_idstr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@idx_tree = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [22 x i8] c"\09%s     %llx [%s-%d]\0A\00", align 1
@.str.1 = private unnamed_addr constant [14 x i8] c"\09%s     %llu\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64, i8*)* @print_idstr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @print_idstr(i64 %0, i8* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  store i64 %0, i64* %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i64, i64* %3, align 8
  %7 = call i64 @FUID_INDEX(i64 %6)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %21

9:                                                ; preds = %2
  %10 = load i64, i64* %3, align 8
  %11 = call i64 @FUID_INDEX(i64 %10)
  %12 = call i8* @zfs_fuid_idx_domain(i32* @idx_tree, i64 %11)
  store i8* %12, i8** %5, align 8
  %13 = load i8*, i8** %4, align 8
  %14 = load i64, i64* %3, align 8
  %15 = trunc i64 %14 to i32
  %16 = load i8*, i8** %5, align 8
  %17 = load i64, i64* %3, align 8
  %18 = call i64 @FUID_RID(i64 %17)
  %19 = trunc i64 %18 to i32
  %20 = call i32 (i8*, i8*, i32, ...) @printf(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0), i8* %13, i32 %15, i8* %16, i32 %19)
  br label %26

21:                                               ; preds = %2
  %22 = load i8*, i8** %4, align 8
  %23 = load i64, i64* %3, align 8
  %24 = trunc i64 %23 to i32
  %25 = call i32 (i8*, i8*, i32, ...) @printf(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.1, i64 0, i64 0), i8* %22, i32 %24)
  br label %26

26:                                               ; preds = %21, %9
  ret void
}

declare dso_local i64 @FUID_INDEX(i64) #1

declare dso_local i8* @zfs_fuid_idx_domain(i32*, i64) #1

declare dso_local i32 @printf(i8*, i8*, i32, ...) #1

declare dso_local i64 @FUID_RID(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
